fixed table overflow

--- a/app/assets/stylesheets/_tables.scss
+++ b/app/assets/stylesheets/_tables.scss
@@ -1,7 +1,6 @@
-// prevent dropdown cut-off at bottom of table
+// allow scrolling of dropdown cut-off at bottom of table
 div.table-responsive {
-  overflow-x: inherit;
-  overflow-y: inherit;
+  overflow: auto;
 }
 
 table.table {
